// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser should parse compare instruction 1`] = `
[
  {
    "instruction": {
      "mnemonic": "CMP",
      "opcode": 218,
      "range": {
        "from": 1,
        "to": 4,
      },
    },
    "label": null,
    "machineCode": Array [218, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 5,
          "to": 7,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 9,
          "to": 11,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 1,
      "to": 11,
    },
  },
  {
    "instruction": {
      "mnemonic": "CMP",
      "opcode": 219,
      "range": {
        "from": 12,
        "to": 15,
      },
    },
    "label": null,
    "machineCode": Array [219, 2, 1,],
    "operands": [
      {
        "range": {
          "from": 16,
          "to": 18,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 20,
          "to": 22,
        },
        "raw": "01",
        "rawValue": "01",
        "type": "Number",
        "value": 1,
      },
    ],
    "range": {
      "from": 12,
      "to": 22,
    },
  },
  {
    "instruction": {
      "mnemonic": "CMP",
      "opcode": 220,
      "range": {
        "from": 23,
        "to": 26,
      },
    },
    "label": null,
    "machineCode": Array [220, 3, 2,],
    "operands": [
      {
        "range": {
          "from": 27,
          "to": 29,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
      {
        "range": {
          "from": 31,
          "to": 35,
        },
        "raw": "[02]",
        "rawValue": "02",
        "type": "Address",
        "value": 2,
      },
    ],
    "range": {
      "from": 23,
      "to": 35,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 36,
        "to": 39,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 36,
      "to": 39,
    },
  },
]
`;

exports[`parser should parse direct arithmetic instruction 1`] = `
[
  {
    "instruction": {
      "mnemonic": "ADD",
      "opcode": 160,
      "range": {
        "from": 1,
        "to": 4,
      },
    },
    "label": null,
    "machineCode": Array [160, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 5,
          "to": 7,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 9,
          "to": 11,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 1,
      "to": 11,
    },
  },
  {
    "instruction": {
      "mnemonic": "SUB",
      "opcode": 161,
      "range": {
        "from": 12,
        "to": 15,
      },
    },
    "label": null,
    "machineCode": Array [161, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 16,
          "to": 18,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 20,
          "to": 22,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
    ],
    "range": {
      "from": 12,
      "to": 22,
    },
  },
  {
    "instruction": {
      "mnemonic": "MUL",
      "opcode": 162,
      "range": {
        "from": 23,
        "to": 26,
      },
    },
    "label": null,
    "machineCode": Array [162, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 27,
          "to": 29,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 31,
          "to": 33,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 23,
      "to": 33,
    },
  },
  {
    "instruction": {
      "mnemonic": "DIV",
      "opcode": 163,
      "range": {
        "from": 34,
        "to": 37,
      },
    },
    "label": null,
    "machineCode": Array [163, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 38,
          "to": 40,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 42,
          "to": 44,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
    ],
    "range": {
      "from": 34,
      "to": 44,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOD",
      "opcode": 166,
      "range": {
        "from": 45,
        "to": 48,
      },
    },
    "label": null,
    "machineCode": Array [166, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 49,
          "to": 51,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 53,
          "to": 55,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 45,
      "to": 55,
    },
  },
  {
    "instruction": {
      "mnemonic": "AND",
      "opcode": 170,
      "range": {
        "from": 56,
        "to": 59,
      },
    },
    "label": null,
    "machineCode": Array [170, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 60,
          "to": 62,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 64,
          "to": 66,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
    ],
    "range": {
      "from": 56,
      "to": 66,
    },
  },
  {
    "instruction": {
      "mnemonic": "OR",
      "opcode": 171,
      "range": {
        "from": 67,
        "to": 69,
      },
    },
    "label": null,
    "machineCode": Array [171, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 70,
          "to": 72,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 74,
          "to": 76,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 67,
      "to": 76,
    },
  },
  {
    "instruction": {
      "mnemonic": "XOR",
      "opcode": 172,
      "range": {
        "from": 77,
        "to": 80,
      },
    },
    "label": null,
    "machineCode": Array [172, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 81,
          "to": 83,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 85,
          "to": 87,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
    ],
    "range": {
      "from": 77,
      "to": 87,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 88,
        "to": 91,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 88,
      "to": 91,
    },
  },
]
`;

exports[`parser should parse immediate arithmetic instruction 1`] = `
[
  {
    "instruction": {
      "mnemonic": "ADD",
      "opcode": 176,
      "range": {
        "from": 1,
        "to": 4,
      },
    },
    "label": null,
    "machineCode": Array [176, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 5,
          "to": 7,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 9,
          "to": 11,
        },
        "raw": "01",
        "rawValue": "01",
        "type": "Number",
        "value": 1,
      },
    ],
    "range": {
      "from": 1,
      "to": 11,
    },
  },
  {
    "instruction": {
      "mnemonic": "SUB",
      "opcode": 177,
      "range": {
        "from": 12,
        "to": 15,
      },
    },
    "label": null,
    "machineCode": Array [177, 1, 2,],
    "operands": [
      {
        "range": {
          "from": 16,
          "to": 18,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
      {
        "range": {
          "from": 20,
          "to": 22,
        },
        "raw": "02",
        "rawValue": "02",
        "type": "Number",
        "value": 2,
      },
    ],
    "range": {
      "from": 12,
      "to": 22,
    },
  },
  {
    "instruction": {
      "mnemonic": "MUL",
      "opcode": 178,
      "range": {
        "from": 23,
        "to": 26,
      },
    },
    "label": null,
    "machineCode": Array [178, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 27,
          "to": 29,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 31,
          "to": 33,
        },
        "raw": "03",
        "rawValue": "03",
        "type": "Number",
        "value": 3,
      },
    ],
    "range": {
      "from": 23,
      "to": 33,
    },
  },
  {
    "instruction": {
      "mnemonic": "DIV",
      "opcode": 179,
      "range": {
        "from": 34,
        "to": 37,
      },
    },
    "label": null,
    "machineCode": Array [179, 3, 4,],
    "operands": [
      {
        "range": {
          "from": 38,
          "to": 40,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
      {
        "range": {
          "from": 42,
          "to": 44,
        },
        "raw": "04",
        "rawValue": "04",
        "type": "Number",
        "value": 4,
      },
    ],
    "range": {
      "from": 34,
      "to": 44,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOD",
      "opcode": 182,
      "range": {
        "from": 45,
        "to": 48,
      },
    },
    "label": null,
    "machineCode": Array [182, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 49,
          "to": 51,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 53,
          "to": 55,
        },
        "raw": "01",
        "rawValue": "01",
        "type": "Number",
        "value": 1,
      },
    ],
    "range": {
      "from": 45,
      "to": 55,
    },
  },
  {
    "instruction": {
      "mnemonic": "AND",
      "opcode": 186,
      "range": {
        "from": 56,
        "to": 59,
      },
    },
    "label": null,
    "machineCode": Array [186, 1, 2,],
    "operands": [
      {
        "range": {
          "from": 60,
          "to": 62,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
      {
        "range": {
          "from": 64,
          "to": 66,
        },
        "raw": "02",
        "rawValue": "02",
        "type": "Number",
        "value": 2,
      },
    ],
    "range": {
      "from": 56,
      "to": 66,
    },
  },
  {
    "instruction": {
      "mnemonic": "OR",
      "opcode": 187,
      "range": {
        "from": 67,
        "to": 69,
      },
    },
    "label": null,
    "machineCode": Array [187, 2, 3,],
    "operands": [
      {
        "range": {
          "from": 70,
          "to": 72,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
      {
        "range": {
          "from": 74,
          "to": 76,
        },
        "raw": "03",
        "rawValue": "03",
        "type": "Number",
        "value": 3,
      },
    ],
    "range": {
      "from": 67,
      "to": 76,
    },
  },
  {
    "instruction": {
      "mnemonic": "XOR",
      "opcode": 188,
      "range": {
        "from": 77,
        "to": 80,
      },
    },
    "label": null,
    "machineCode": Array [188, 3, 4,],
    "operands": [
      {
        "range": {
          "from": 81,
          "to": 83,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
      {
        "range": {
          "from": 85,
          "to": 87,
        },
        "raw": "04",
        "rawValue": "04",
        "type": "Number",
        "value": 4,
      },
    ],
    "range": {
      "from": 77,
      "to": 87,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 88,
        "to": 91,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 88,
      "to": 91,
    },
  },
]
`;

exports[`parser should parse instruction with 1 operand 1`] = `
[
  {
    "instruction": {
      "mnemonic": "INC",
      "opcode": 164,
      "range": {
        "from": 8,
        "to": 11,
      },
    },
    "label": {
      "identifier": "START",
      "range": {
        "from": 1,
        "to": 6,
      },
    },
    "machineCode": Array [164, 0,],
    "operands": [
      {
        "range": {
          "from": 12,
          "to": 14,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
    ],
    "range": {
      "from": 8,
      "to": 14,
    },
  },
  {
    "instruction": {
      "mnemonic": "DEC",
      "opcode": 165,
      "range": {
        "from": 15,
        "to": 18,
      },
    },
    "label": null,
    "machineCode": Array [165, 1,],
    "operands": [
      {
        "range": {
          "from": 19,
          "to": 21,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 15,
      "to": 21,
    },
  },
  {
    "instruction": {
      "mnemonic": "NOT",
      "opcode": 173,
      "range": {
        "from": 22,
        "to": 25,
      },
    },
    "label": null,
    "machineCode": Array [173, 2,],
    "operands": [
      {
        "range": {
          "from": 26,
          "to": 28,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
    ],
    "range": {
      "from": 22,
      "to": 28,
    },
  },
  {
    "instruction": {
      "mnemonic": "ROL",
      "opcode": 154,
      "range": {
        "from": 29,
        "to": 32,
      },
    },
    "label": null,
    "machineCode": Array [154, 3,],
    "operands": [
      {
        "range": {
          "from": 33,
          "to": 35,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
    ],
    "range": {
      "from": 29,
      "to": 35,
    },
  },
  {
    "instruction": {
      "mnemonic": "ROR",
      "opcode": 155,
      "range": {
        "from": 36,
        "to": 39,
      },
    },
    "label": null,
    "machineCode": Array [155, 0,],
    "operands": [
      {
        "range": {
          "from": 40,
          "to": 42,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
    ],
    "range": {
      "from": 36,
      "to": 42,
    },
  },
  {
    "instruction": {
      "mnemonic": "SHL",
      "opcode": 156,
      "range": {
        "from": 43,
        "to": 46,
      },
    },
    "label": null,
    "machineCode": Array [156, 1,],
    "operands": [
      {
        "range": {
          "from": 47,
          "to": 49,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 43,
      "to": 49,
    },
  },
  {
    "instruction": {
      "mnemonic": "SHR",
      "opcode": 157,
      "range": {
        "from": 50,
        "to": 53,
      },
    },
    "label": null,
    "machineCode": Array [157, 2,],
    "operands": [
      {
        "range": {
          "from": 54,
          "to": 56,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
    ],
    "range": {
      "from": 50,
      "to": 56,
    },
  },
  {
    "instruction": {
      "mnemonic": "JMP",
      "opcode": 192,
      "range": {
        "from": 57,
        "to": 60,
      },
    },
    "label": null,
    "machineCode": Array [192,],
    "operands": [
      {
        "range": {
          "from": 61,
          "to": 66,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 57,
      "to": 66,
    },
  },
  {
    "instruction": {
      "mnemonic": "JZ",
      "opcode": 193,
      "range": {
        "from": 67,
        "to": 69,
      },
    },
    "label": null,
    "machineCode": Array [193,],
    "operands": [
      {
        "range": {
          "from": 70,
          "to": 75,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 67,
      "to": 75,
    },
  },
  {
    "instruction": {
      "mnemonic": "JNZ",
      "opcode": 194,
      "range": {
        "from": 76,
        "to": 79,
      },
    },
    "label": null,
    "machineCode": Array [194,],
    "operands": [
      {
        "range": {
          "from": 80,
          "to": 85,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 76,
      "to": 85,
    },
  },
  {
    "instruction": {
      "mnemonic": "JS",
      "opcode": 195,
      "range": {
        "from": 86,
        "to": 88,
      },
    },
    "label": null,
    "machineCode": Array [195,],
    "operands": [
      {
        "range": {
          "from": 89,
          "to": 94,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 86,
      "to": 94,
    },
  },
  {
    "instruction": {
      "mnemonic": "JNS",
      "opcode": 196,
      "range": {
        "from": 95,
        "to": 98,
      },
    },
    "label": null,
    "machineCode": Array [196,],
    "operands": [
      {
        "range": {
          "from": 99,
          "to": 104,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 95,
      "to": 104,
    },
  },
  {
    "instruction": {
      "mnemonic": "JO",
      "opcode": 197,
      "range": {
        "from": 105,
        "to": 107,
      },
    },
    "label": null,
    "machineCode": Array [197,],
    "operands": [
      {
        "range": {
          "from": 108,
          "to": 113,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 105,
      "to": 113,
    },
  },
  {
    "instruction": {
      "mnemonic": "JNO",
      "opcode": 198,
      "range": {
        "from": 114,
        "to": 117,
      },
    },
    "label": null,
    "machineCode": Array [198,],
    "operands": [
      {
        "range": {
          "from": 118,
          "to": 123,
        },
        "raw": "start",
        "rawValue": "START",
        "type": "Label",
        "value": undefined,
      },
    ],
    "range": {
      "from": 114,
      "to": 123,
    },
  },
  {
    "instruction": {
      "mnemonic": "PUSH",
      "opcode": 224,
      "range": {
        "from": 124,
        "to": 128,
      },
    },
    "label": null,
    "machineCode": Array [224, 0,],
    "operands": [
      {
        "range": {
          "from": 129,
          "to": 131,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
    ],
    "range": {
      "from": 124,
      "to": 131,
    },
  },
  {
    "instruction": {
      "mnemonic": "POP",
      "opcode": 225,
      "range": {
        "from": 132,
        "to": 135,
      },
    },
    "label": null,
    "machineCode": Array [225, 1,],
    "operands": [
      {
        "range": {
          "from": 136,
          "to": 138,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
    ],
    "range": {
      "from": 132,
      "to": 138,
    },
  },
  {
    "instruction": {
      "mnemonic": "CALL",
      "opcode": 202,
      "range": {
        "from": 139,
        "to": 143,
      },
    },
    "label": null,
    "machineCode": Array [202, 0,],
    "operands": [
      {
        "range": {
          "from": 144,
          "to": 145,
        },
        "raw": "0",
        "rawValue": "0",
        "type": "Number",
        "value": 0,
      },
    ],
    "range": {
      "from": 139,
      "to": 145,
    },
  },
  {
    "instruction": {
      "mnemonic": "INT",
      "opcode": 204,
      "range": {
        "from": 146,
        "to": 149,
      },
    },
    "label": null,
    "machineCode": Array [204, 1,],
    "operands": [
      {
        "range": {
          "from": 150,
          "to": 151,
        },
        "raw": "1",
        "rawValue": "1",
        "type": "Number",
        "value": 1,
      },
    ],
    "range": {
      "from": 146,
      "to": 151,
    },
  },
  {
    "instruction": {
      "mnemonic": "IN",
      "opcode": 240,
      "range": {
        "from": 152,
        "to": 154,
      },
    },
    "label": null,
    "machineCode": Array [240, 2,],
    "operands": [
      {
        "range": {
          "from": 155,
          "to": 156,
        },
        "raw": "2",
        "rawValue": "2",
        "type": "Number",
        "value": 2,
      },
    ],
    "range": {
      "from": 152,
      "to": 156,
    },
  },
  {
    "instruction": {
      "mnemonic": "OUT",
      "opcode": 241,
      "range": {
        "from": 157,
        "to": 160,
      },
    },
    "label": null,
    "machineCode": Array [241, 3,],
    "operands": [
      {
        "range": {
          "from": 161,
          "to": 162,
        },
        "raw": "3",
        "rawValue": "3",
        "type": "Number",
        "value": 3,
      },
    ],
    "range": {
      "from": 157,
      "to": 162,
    },
  },
  {
    "instruction": {
      "mnemonic": "ORG",
      "opcode": null,
      "range": {
        "from": 163,
        "to": 166,
      },
    },
    "label": null,
    "machineCode": Array [4,],
    "operands": [
      {
        "range": {
          "from": 167,
          "to": 168,
        },
        "raw": "4",
        "rawValue": "4",
        "type": "Number",
        "value": 4,
      },
    ],
    "range": {
      "from": 163,
      "to": 168,
    },
  },
  {
    "instruction": {
      "mnemonic": "DB",
      "opcode": null,
      "range": {
        "from": 169,
        "to": 171,
      },
    },
    "label": null,
    "machineCode": Array [5,],
    "operands": [
      {
        "range": {
          "from": 172,
          "to": 173,
        },
        "raw": "5",
        "rawValue": "5",
        "type": "Number",
        "value": 5,
      },
    ],
    "range": {
      "from": 169,
      "to": 173,
    },
  },
  {
    "instruction": {
      "mnemonic": "DB",
      "opcode": null,
      "range": {
        "from": 174,
        "to": 176,
      },
    },
    "label": null,
    "machineCode": Array [54, 55,],
    "operands": [
      {
        "range": {
          "from": 177,
          "to": 181,
        },
        "raw": "\\"67\\"",
        "rawValue": "67",
        "type": "String",
        "value": Array [54, 55,],
      },
    ],
    "range": {
      "from": 174,
      "to": 181,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 182,
        "to": 185,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 182,
      "to": 185,
    },
  },
]
`;

exports[`parser should parse instruction with no operand 1`] = `
[
  {
    "instruction": {
      "mnemonic": "PUSHF",
      "opcode": 234,
      "range": {
        "from": 1,
        "to": 6,
      },
    },
    "label": null,
    "machineCode": Array [234,],
    "operands": Array [],
    "range": {
      "from": 1,
      "to": 6,
    },
  },
  {
    "instruction": {
      "mnemonic": "POPF",
      "opcode": 235,
      "range": {
        "from": 7,
        "to": 11,
      },
    },
    "label": null,
    "machineCode": Array [235,],
    "operands": Array [],
    "range": {
      "from": 7,
      "to": 11,
    },
  },
  {
    "instruction": {
      "mnemonic": "RET",
      "opcode": 203,
      "range": {
        "from": 12,
        "to": 15,
      },
    },
    "label": null,
    "machineCode": Array [203,],
    "operands": Array [],
    "range": {
      "from": 12,
      "to": 15,
    },
  },
  {
    "instruction": {
      "mnemonic": "IRET",
      "opcode": 205,
      "range": {
        "from": 16,
        "to": 20,
      },
    },
    "label": null,
    "machineCode": Array [205,],
    "operands": Array [],
    "range": {
      "from": 16,
      "to": 20,
    },
  },
  {
    "instruction": {
      "mnemonic": "HALT",
      "opcode": 0,
      "range": {
        "from": 21,
        "to": 25,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 21,
      "to": 25,
    },
  },
  {
    "instruction": {
      "mnemonic": "NOP",
      "opcode": 255,
      "range": {
        "from": 26,
        "to": 29,
      },
    },
    "label": null,
    "machineCode": Array [255,],
    "operands": Array [],
    "range": {
      "from": 26,
      "to": 29,
    },
  },
  {
    "instruction": {
      "mnemonic": "CLO",
      "opcode": 254,
      "range": {
        "from": 30,
        "to": 33,
      },
    },
    "label": null,
    "machineCode": Array [254,],
    "operands": Array [],
    "range": {
      "from": 30,
      "to": 33,
    },
  },
  {
    "instruction": {
      "mnemonic": "CLI",
      "opcode": 253,
      "range": {
        "from": 34,
        "to": 37,
      },
    },
    "label": null,
    "machineCode": Array [253,],
    "operands": Array [],
    "range": {
      "from": 34,
      "to": 37,
    },
  },
  {
    "instruction": {
      "mnemonic": "STI",
      "opcode": 252,
      "range": {
        "from": 38,
        "to": 41,
      },
    },
    "label": null,
    "machineCode": Array [252,],
    "operands": Array [],
    "range": {
      "from": 38,
      "to": 41,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 42,
        "to": 45,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 42,
      "to": 45,
    },
  },
]
`;

exports[`parser should parse move instruction 1`] = `
[
  {
    "instruction": {
      "mnemonic": "MOV",
      "opcode": 208,
      "range": {
        "from": 1,
        "to": 4,
      },
    },
    "label": null,
    "machineCode": Array [208, 0, 1,],
    "operands": [
      {
        "range": {
          "from": 5,
          "to": 7,
        },
        "raw": "al",
        "rawValue": "AL",
        "type": "Register",
        "value": 0,
      },
      {
        "range": {
          "from": 9,
          "to": 11,
        },
        "raw": "01",
        "rawValue": "01",
        "type": "Number",
        "value": 1,
      },
    ],
    "range": {
      "from": 1,
      "to": 11,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOV",
      "opcode": 209,
      "range": {
        "from": 12,
        "to": 15,
      },
    },
    "label": null,
    "machineCode": Array [209, 1, 2,],
    "operands": [
      {
        "range": {
          "from": 16,
          "to": 18,
        },
        "raw": "bl",
        "rawValue": "BL",
        "type": "Register",
        "value": 1,
      },
      {
        "range": {
          "from": 20,
          "to": 24,
        },
        "raw": "[02]",
        "rawValue": "02",
        "type": "Address",
        "value": 2,
      },
    ],
    "range": {
      "from": 12,
      "to": 24,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOV",
      "opcode": 210,
      "range": {
        "from": 25,
        "to": 28,
      },
    },
    "label": null,
    "machineCode": Array [210, 3, 2,],
    "operands": [
      {
        "range": {
          "from": 29,
          "to": 33,
        },
        "raw": "[03]",
        "rawValue": "03",
        "type": "Address",
        "value": 3,
      },
      {
        "range": {
          "from": 35,
          "to": 37,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
    ],
    "range": {
      "from": 25,
      "to": 37,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOV",
      "opcode": 211,
      "range": {
        "from": 38,
        "to": 41,
      },
    },
    "label": null,
    "machineCode": Array [211, 3, 0,],
    "operands": [
      {
        "range": {
          "from": 42,
          "to": 44,
        },
        "raw": "dl",
        "rawValue": "DL",
        "type": "Register",
        "value": 3,
      },
      {
        "range": {
          "from": 46,
          "to": 50,
        },
        "raw": "[al]",
        "rawValue": "AL",
        "type": "RegisterAddress",
        "value": 0,
      },
    ],
    "range": {
      "from": 38,
      "to": 50,
    },
  },
  {
    "instruction": {
      "mnemonic": "MOV",
      "opcode": 212,
      "range": {
        "from": 51,
        "to": 54,
      },
    },
    "label": null,
    "machineCode": Array [212, 1, 2,],
    "operands": [
      {
        "range": {
          "from": 55,
          "to": 59,
        },
        "raw": "[bl]",
        "rawValue": "BL",
        "type": "RegisterAddress",
        "value": 1,
      },
      {
        "range": {
          "from": 61,
          "to": 63,
        },
        "raw": "cl",
        "rawValue": "CL",
        "type": "Register",
        "value": 2,
      },
    ],
    "range": {
      "from": 51,
      "to": 63,
    },
  },
  {
    "instruction": {
      "mnemonic": "END",
      "opcode": 0,
      "range": {
        "from": 64,
        "to": 67,
      },
    },
    "label": null,
    "machineCode": Array [0,],
    "operands": Array [],
    "range": {
      "from": 64,
      "to": 67,
    },
  },
]
`;
